[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://src/scenes/main_menu/MainMenu.gd" id="1_mainmenu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_mainmenu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
custom_minimum_size = Vector2(300, 240)

[node name="Title" type="Label" parent="VBoxContainer"]
text = "PowerGrid"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
placeholder_text = "Your name"

[node name="UrlInput" type="LineEdit" parent="VBoxContainer"]
placeholder_text = "Server URL"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
text = "Connect"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
horizontal_alignment = 1
